--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
 	<form action="/auth/localuser/new" method="post"> 
 		<p>Sign Up:</p>
 		<input name="username" placeholder="username" />
-		<input name="password" placeholder="password" />
+		<input name="password" placeholder="password" type="password" />
 		<input type="submit" />
 	</form>
 
@@ -16,7 +16,7 @@
 	<form action="/auth/localuser/login" method="post"> 
 		<p>Login:</p>
 		<input name="username" placeholder="username" />
-		<input name="password" placeholder="password" />
+		<input name="password" placeholder="password" type="password"/>
 		<input type="submit" />
 	</form>
 
